--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-@import url(/css/header.css);
-@import url(/css/reset.css);
-@import url(/css/estrutura.css);
-@import url(/css/tipografia.css);
-@import url(/css/cores.css);
-@import url(/css/sidenav.css);
-@import url(/css/anuncios.css);
-@import url(/css/footer.css);
-@import url(/css/conteudo.css);
+@import url(./header.css);
+@import url(./reset.css);
+@import url(./estrutura.css);
+@import url(./tipografia.css);
+@import url(./cores.css);
+@import url(./sidenav.css);
+@import url(./anuncios.css);
+@import url(./footer.css);
+@import url(./conteudo.css);
