--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -27,3 +27,8 @@ body {
   font-family: "Volkhov", Georgia, serif;
   font-size: 0.875rem;
 }
+
+.font-s {
+  font-family: "Volkhov", Georgia, serif;
+  font-size: 0.875rem;
+}
